--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Clara Isenmann · Portfolio</title>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
-  <body><h1>Clara Isenmann</h1></body>
+  <body>
+    <h1>Clara Isenmann</h1>
+    <img alt=hfksjd src=img/mitbringen.png></img>
+  </body>
 </html>
